--- a/index/denglihong.EarthquakeWarning.yml
+++ b/index/denglihong.EarthquakeWarning.yml
@@ -4,10 +4,10 @@
 
 id: denglihong.EarthquakeWarning
 name: 地震预警
-description: 地震预警功能
+description: 地震能预警，预警能救命
 entranceAssembly: "EarthquakeWarning.dll"
 url: https://github.com/denglihong2007/EarthquakeWarningForClassIsLand
-version: 0.2.1.0
+version: 0.3.0.0
 apiVersion: 1.5.0.4
 author: 电排骨
 repoOwner: denglihong2007
