修改LyricsSupportForClassIsland的版本号

--- a/index/Xwei1645.LyricsSupportForClassIsland.yml
+++ b/index/Xwei1645.LyricsSupportForClassIsland.yml
@@ -4,10 +4,10 @@
 
 id: Xwei1645.LyricsSupportForClassIsland
 name: 岛上歌词
-description: 用于定时发出歌词提醒（或与网易云音乐同步，在播放时发出提醒）的插件。
+description: 用于定时发出歌词提醒的插件。
 entranceAssembly: "LyricsSupportForClassIsland.dll"
 url: https://github.com/Xwei1645/LyricsSupportForClassIsland
-version: 0.0.1
+version: 0.0.0.1
 apiVersion: 1.5.0
 author: Xwei1645
 repoOwner: Xwei1645
