--- a/index/jiangyin14.lyrics.yml
+++ b/index/jiangyin14.lyrics.yml
@@ -1,11 +1,11 @@
-id: jiangyin14.lyrics  # 插件 id
-name: LyricsIsland  # 插件名称
-apiVersion: 1.5.0.3  # 插件面向的 ClassIsland 版本
-description: 在主界面上显示来自音乐软件的歌词。  # 插件描述
-entranceAssembly: "LyricsComponent.dll"  # 插件入口程序集
-url: https://github.com/jiangyin14/LyricsIsland  # 插件 Url
-author: jiangyin14  # 插件作者
-version: 1.0.0.2  # 插件版本
+id: jiangyin14.lyrics
+name: LyricsIsland
+apiVersion: 1.5.0.3
+description: 在主界面上显示来自音乐软件的歌词。
+entranceAssembly: "LyricsComponent.dll"
+url: https://github.com/jiangyin14/LyricsIsland
+author: jiangyin14,星标,Xwei1645
+version: 1.0.0.2
 readme: README.md
 icon: icon.png
 repoOwner: jiangyin14
