--- a/.github/workflows/gen-index.yml
+++ b/.github/workflows/gen-index.yml
@@ -42,6 +42,6 @@ jobs:
         with:
           tag: latest
           allowUpdates: true
-          artifacts: ./out/*.zip,./out/*.md5sum
+          artifacts: ./out/*.zip,./out/*.md5sum,./out/source/index.json
           bodyFile: ./out/checksums.md
           token: ${{ secrets.GITHUB_TOKEN }}
